# samsara-sdks

./: README.md
apimatic/: swagger-OpenApi3Json.json  swagger-Postman20.postman_collection.json
autorest/csharp/: Add.cs  AddExtensions.cs  Create.cs  CreateExtensions.cs  Get.cs  GetExtensions.cs  IAdd.cs  ICreate.cs  IGet.cs  IList.cs  ISamsaraAPI.cs  IUpdate.cs  List.cs  ListExtensions.cs  SamsaraAPI.cs  SamsaraAPIExtensions.cs  Update.cs  UpdateExtensions.cs
autorest/go/: add.go  client.go  create.go  get.go  list.go  models.go  update.go  version.go
autorest/nodejs/: package.json
openapi-generator/: swagger.json
openapi-generator/ada/: defaultpackage.gpr
openapi-generator/ada-server/: README.md  defaultpackage.gpr
openapi-generator/android/: README.md
openapi-generator/apache2/: DriversApi.conf  FleetApi.conf  RoutesApi.conf  SensorsApi.conf  TagsApi.conf
openapi-generator/apex/: README.md
openapi-generator/aspnetcore/: Org.OpenAPITools.sln  README.md
openapi-generator/bash/: README.md  _client.sh  client.sh  client.sh.bash-completion
openapi-generator/c/: CMakeLists.txt  README.md
openapi-generator/c/api/: AssetsAPI.c  AssetsAPI.h  DriversAPI.c  DriversAPI.h  FleetAPI.c  FleetAPI.h  IndustrialAPI.c  IndustrialAPI.h  RoutesAPI.c  RoutesAPI.h  SafetyAPI.c  SafetyAPI.h  SensorsAPI.c  SensorsAPI.h  TagsAPI.c  TagsAPI.h  UsersAPI.c  UsersAPI.h
openapi-generator/c/model/: _addresses_addresses.c  _addresses_addresses.h  _sensors_history_series.c  _sensors_history_series.h  address.c  address.h  address_geofence.c  address_geofence.h  address_geofence_circle.c  address_geofence_circle.h  address_geofence_polygon.c  address_geofence_polygon.h  address_geofence_polygon_vertices.c  address_geofence_polygon_vertices.h  all_route_job_updates.c  all_route_job_updates.h  asset.c  asset.h  asset_cable.c  asset_cable.h  asset_current_location.c  asset_current_location.h  asset_current_locations_response.c  asset_current_locations_response.h  asset_reefer_response.c  asset_reefer_response.h  asset_reefer_response_reefer_stats.c  asset_reefer_response_reefer_stats.h  asset_reefer_response_reefer_stats_alarms.c  asset_reefer_response_reefer_stats_alarms.h  asset_reefer_response_reefer_stats_alarms_1.c  asset_reefer_response_reefer_stats_alarms_1.h  asset_reefer_response_reefer_stats_engine_hours.c  asset_reefer_response_reefer_stats_engine_hours.h  asset_reefer_response_reefer_stats_fuel_percentage.c  asset_reefer_response_reefer_stats_fuel_percentage.h  asset_reefer_response_reefer_stats_power_status.c  asset_reefer_response_reefer_stats_power_status.h  asset_reefer_response_reefer_stats_return_air_temp.c  asset_reefer_response_reefer_stats_return_air_temp.h  (+290 more)
openapi-generator/c/src/: apiClient.c
openapi-generator/clojure/: project.clj
openapi-generator/cpp-pistache-server/: README.md  main-api-server.cpp
openapi-generator/cpp-restbed-server/: README.md
openapi-generator/cpp-restsdk/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h  README.md
openapi-generator/csharp/: Org.OpenAPITools.sln  README.md
openapi-generator/csharp-dotnet2/: README.md
openapi-generator/csharp-nancyfx/: Org.OpenAPITools.sln
openapi-generator/csharp-refactor/: Org.OpenAPITools.sln  README.md
openapi-generator/cwiki/: confluence-markup.txt
openapi-generator/dart/: README.md
openapi-generator/dart-jaguar/: README.md
openapi-generator/eiffel/: README.md  api_client.ecf
openapi-generator/elixir/: README.md  mix.exs
openapi-generator/elm/: README.md
openapi-generator/go/: README.md  api_assets.go  api_drivers.go  api_fleet.go  api_industrial.go  api_routes.go  api_safety.go  api_sensors.go  api_tags.go  api_users.go  client.go  configuration.go  model__addresses_addresses.go  model__sensors_history_series.go  model_address.go  model_address_geofence.go  model_address_geofence_circle.go  model_address_geofence_polygon.go  model_address_geofence_polygon_vertices.go  model_all_route_job_updates.go  model_asset.go  model_asset_cable.go  model_asset_current_location.go  model_asset_current_locations_response.go  model_asset_reefer_response.go  model_asset_reefer_response_reefer_stats.go  model_asset_reefer_response_reefer_stats_alarms.go  model_asset_reefer_response_reefer_stats_alarms_1.go  model_asset_reefer_response_reefer_stats_engine_hours.go  model_asset_reefer_response_reefer_stats_fuel_percentage.go  model_asset_reefer_response_reefer_stats_power_status.go  model_asset_reefer_response_reefer_stats_return_air_temp.go  model_asset_reefer_response_reefer_stats_set_point.go  model_aux_input.go  model_aux_input_series.go  model_cargo_response.go  model_cargo_response_sensors.go  model_contact.go  model_data_input_history_response.go  model_data_input_history_response_points.go  (+137 more)
openapi-generator/go-gin-server/: main.go
openapi-generator/go-server/: main.go
openapi-generator/haskell/: README.md  samsara.cabal
openapi-generator/haskell-http-client/: README.md  samsara.cabal
openapi-generator/html/: index.html
openapi-generator/html2/: index.html
openapi-generator/java/: README.md
openapi-generator/java-inflector/: inflector.yaml
openapi-generator/java-vertx/: README.md  pom.xml
openapi-generator/javascript/: README.md  package.json
openapi-generator/javascript-flowtyped/: README.md  package.json
openapi-generator/jaxrs-cxf/: pom.xml
openapi-generator/jaxrs-cxf-client/: pom.xml
openapi-generator/jaxrs-spec/: README.md
openapi-generator/jmeter/: AssetsApi.csv  AssetsApi.jmx  DriversApi.csv  DriversApi.jmx  FleetApi.csv  FleetApi.jmx  IndustrialApi.csv  IndustrialApi.jmx  RoutesApi.csv  RoutesApi.jmx  SafetyApi.csv  SafetyApi.jmx  SensorsApi.csv  SensorsApi.jmx  TagsApi.csv  TagsApi.jmx  UsersApi.csv  UsersApi.jmx
openapi-generator/kotlin-server/: README.md
openapi-generator/r/: NAMESPACE  (+2 more)
swagger-codegen/: .swp
(+28668 files in other folders)
